objects/Paradise_Restaurant__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>P_Nonveg__c</fullName>
        <label>P Nonveg</label>
        <referenceTo>P_Nonveg__c</referenceTo>
        <relationshipLabel>Paradise Restaurants</relationshipLabel>
        <relationshipName>Paradise_Restaurants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P_Veg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P Veg</label>
        <referenceTo>P_Veg__c</referenceTo>
        <relationshipLabel>Paradise Restaurants</relationshipLabel>
        <relationshipName>Paradise_Restaurants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Paradise Restaurant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Paradise Restaurant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paradise Restaurants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>